# paukn

./: CMakeLists.txt  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  libpaukn.spec.in  paukn.pc.in  vst-validator-cmake.patch
build-mac/: build.sh
build-mingw/: build.sh
build-msvc/: build.sh
include/: paukn.h
m4/: libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
resource/: paukn.rc
src/: Makefile.am  Makefile.in  biquadvoice.h  buffer.h  combvoice.h  config.h  config.h.in  controller.cpp  controller.h  decimatevoice.h  dwgs.cpp  dwgs.h  dwgsstate.h  dwgsvoice.h  envelope.h  factory.cpp  filter.cpp  filter.h  granulatestate.h  granulatevoice.h  logscale.h  midi.cpp  params.cpp  params.h  paukn.cpp  paukn.h  processor.cpp  processor.h  resample.h  sinccoeffs.cpp  sinccoeffs.h  syncvoice.cpp  syncvoice.h  tags.h  version.h  voice.cpp  voice.h  vsteffect.cpp  vsteffect.h
